[New] install mysql-client

--- a/9.0.2-apache/Dockerfile
+++ b/9.0.2-apache/Dockerfile
@@ -1,6 +1,9 @@
 FROM owncloud:9.0.2-apache
 
-RUN apt-get update && apt-get install -y sudo
+RUN apt-get update \
+    && apt-get install -y sudo \
+    && apt-get install -y mysql-client \
+    && apt-get clean
 
 COPY docker-entrypoint.sh /entrypoint-ex.sh
 ENTRYPOINT ["/entrypoint-ex.sh"]
