--- a/9.0.2-apache/Dockerfile
+++ b/9.0.2-apache/Dockerfile
@@ -1,9 +1,11 @@
 FROM owncloud:9.0.2-apache
 
 RUN apt-get update \
-    && apt-get install -y sudo \
-    && apt-get install -y mysql-client \
-    && apt-get clean
+    && apt-get install -y \
+        sudo \
+        mysql-client \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY docker-entrypoint.sh /entrypoint-ex.sh
 ENTRYPOINT ["/entrypoint-ex.sh"]
